# actuation_porting

./: .cursorignore  .env  .gitignore  .gitmodules  DEVNOTES.md  NODES.md  NOTES.md  README.md  TODO  TODO.md  asd.txt  avh.py  bridge-config.yaml  build.sh  check.sh  cyclonedds-avh.xml  cyclonedds.xml  dev_notes.md  launch-dev-container.sh  launch_autoware.sh  launch_dev.sh  launch_dev_container.sh  rebuild.sh  side-by-side.md  template.env  uni.txt  upload.py
actuation_autoware/: CMakeLists.txt  Kconfig  cyclonedds_config.cmake  node.hpp  objectives  prj_actuation.conf  west.yml
actuation_autoware/boards/: fvp_baser_aemv8r_actuation.conf  fvp_baser_aemv8r_smp_actuation.conf  fvp_baser_aemv8r_smp_stub.overlay  native_sim_actuation.conf
actuation_autoware/include/: adapter.hpp  config.hpp  main.hpp  message_adapter.hpp  network.hpp
actuation_autoware/include/common/: clock.hpp  common.hpp  dds.hpp  message_adapter.hpp  messages.hpp  node.hpp  sequence.hpp
actuation_autoware/include/common/clock/: clock.hpp
actuation_autoware/include/common/dds/: dds.hpp  dds_config.hpp  message_queue.hpp  publisher.hpp  subscriber.hpp
actuation_autoware/include/common/logger/: logger.hpp
actuation_autoware/include/common/node/: node.hpp
actuation_autoware/include/common/sequence/: sequence.hpp
actuation_autoware/include/common/time/: time.hpp
actuation_autoware/include/message/: message.hpp  sequence.hpp
actuation_autoware/include/msg/: Trajectory.h
actuation_autoware/include/node/: dds.hpp  dds_config.hpp  node.hpp
actuation_autoware/native_sim/: README.md  configure_zeth.sh  net-setup.sh  zeth.conf  zeth.conf.stop
actuation_autoware/src/: file.c  main.cpp
actuation_autoware/src/autoware/autoware_interpolation/: autoware_interpolation.cmake
actuation_autoware/src/autoware/autoware_interpolation_min/: autoware_interpolation.cmake
actuation_autoware/src/autoware/autoware_motion_utils_min/: autoware_motion_utils.cmake
actuation_autoware/src/autoware/autoware_mpc_lateral_controller/: autoware_mpc_lateral_controller.cmake
actuation_autoware/src/autoware/autoware_pid_longitudinal_controller/: autoware_pid_longitudinal_controller.cmake
actuation_autoware/src/autoware/autoware_trajectory_follower_base_min/: autoware_trajectory_follower_base.cmake
actuation_autoware/src/autoware/autoware_trajectory_follower_node/: autoware_trajectory_follower_node.cmake
actuation_autoware/src/autoware/autoware_universe_utils_min/: autoware_universe_utils.cmake
actuation_autoware/src/autoware_interpolation_min/: autoware_interpolation.cmake
actuation_autoware/src/autoware_motion_utils_min/: autoware_motion_utils.cmake
actuation_autoware/src/autoware_mpc_lateral_controller/: package.xml
actuation_autoware/src/autoware_osqp_interface/: autoware_osqp_interface.cmake
actuation_autoware/src/autoware_trajectory_follower_base_min/: autoware_trajectory_follower_base.cmake
actuation_autoware/src/autoware_universe_utils_min/: autoware_universe_utils.cmake  package.xml
actuation_autoware/src/autoware_vehicle_info_utils/: autoware_vehicle_info_utils.cmake
actuation_autoware/src/autoware_vehicle_info_utils/src/: vehicle_info_utils.cpp
actuation_autoware/src/common/: common.cmake  node.cpp
actuation_autoware/src/common/test/: test.cpp
actuation_autoware/src/node/: dds.cpp  node.cpp
actuation_autoware/src/nodes/autoware_interpolation_min/: autoware_interpolation.cmake
actuation_autoware/src/nodes/autoware_motion_utils_min/: autoware_motion_utils.cmake
actuation_autoware/src/nodes/autoware_osqp_interface/: autoware_osqp_interface.cmake
actuation_autoware/test/: pub.c  sub.c  test.cpp
actuation_autoware/test/dds/: cyclonedds.xml  dds_pub.cpp  dds_sub.cpp
actuation_module/: CMakeLists.freertos.txt  CMakeLists.txt  Kconfig  cyclonedds_config.cmake  prj_actuation.conf
actuation_module/boards/: fvp_baser_aemv8r_smp_actuation.conf  s32z270dc2_rtu0_r52_actuation.conf
actuation_module/cmake/: actuation_core.cmake
actuation_module/freertos/: CMakeLists.txt  freertos_main.cpp
actuation_module/include/: config.hpp
actuation_module/include/platform/: platform_clock.h  platform_config.h  platform_network.h  platform_threading.h
actuation_module/native_sim/: README.md  net-setup.sh  zeth.conf  zeth.conf.stop
actuation_module/src/: main.cpp
actuation_module/test/: dds_pub.cpp  dds_sub.cpp  unit_test.cpp
actuation_module/test/dds/: dds_pub.cpp  dds_sub.cpp
actuation_module/test/rosbags/: actuation_control_cmd_150ms  arm_kit_control_cmd.yaml  play_rosbag.sh
actuation_packages/ros2_pub/: CMakeLists.txt  package.xml
actuation_packages/ros2_pub/src/: ros2_pub.cpp
actuation_packages/ros2_sub/: CMakeLists.txt  package.xml
actuation_packages/ros2_sub/src/: ros2_sub.cpp
zephyr_app/: CMakeLists.txt  CMakeLists.txt.orig  cyclonedds_config.cmake  prj_actuation.conf  west.yml
zephyr_app/boards/: fvp_baser_aemv8r_smp_actuation.conf
zephyr_app/include/: constants.h  messages.h  zephyr_app.hpp
zephyr_app/src/: file.c  main.c  main.cpp
zephyr_app/src/autoware_helper_utils/: CMakeLists.txt  package.xml
zephyr_app/src/autoware_interpolation_min/: autoware_interpolation.cmake
zephyr_app/src/autoware_motion_utils/: CMakeLists.txt
zephyr_app/src/autoware_motion_utils_min/: CMakeLists.txt  autoware_motion_utils.cmake  package.xml
zephyr_app/src/autoware_mpc_lateral_controller/: CMakeLists.txt  autoware_mpc_lateral_controller.cmake
zephyr_app/src/autoware_osqp_interface/: osqp_interface.cmake
zephyr_app/src/autoware_trajectory_follower_base_min/: autoware_trajectory_follower_base.cmake  package.xml
zephyr_app/src/autoware_universe_utils/: CMakeLists.txt
zephyr_app/src/autoware_universe_utils min/: autoware_universe_utils.cmake
zephyr_app/src/autoware_universe_utils_min/: autoware_universe_utils.cmake
zephyr_app/src/autoware_vehicle_info_utils/: autoware_vehicle_info_utils.cmake  package.xml
zephyr_app/src/interpolation/: CMakeLists.txt
zephyr_app/src/osqp_interface/: CMakeLists.txt  osqp_interface.cmake  package.xml
(+466 files in other folders)
