<?xml version="1.0"?>
<package format="3">
  <name>ros2_sub</name>
  <version>0.1.0</version>
  <description>ROS2 subscriber package</description>
  <maintainer email="oguz.ozturk@autoware.org">Oguz Ozturk</maintainer>
  <license>Apache License 2.0</license>
  
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 